--- a/Libraries/Nop.Data/Nop.Data.csproj
+++ b/Libraries/Nop.Data/Nop.Data.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.0.133" />
@@ -30,5 +31,8 @@
     <Compile Remove="Mapping\Shipping\DeliveryDateMap.cs" />
     <Compile Remove="Mapping\Gdpr\GdprConsentMap.cs" />
     <Compile Remove="Mapping\Gdpr\GdprLog.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Mapping\Notifications\" />
   </ItemGroup>
 </Project>
