--- a/Presentation/Nop.Web/App_Data/dataSettings.json
+++ b/Presentation/Nop.Web/App_Data/dataSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "DataProvider": "sqlserver",
-  "DataConnectionString": "Data Source=localhost;Initial Catalog=NopFramework;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=123qweRt",
+  "DataConnectionString": "Data Source=localhost;Initial Catalog=nop1;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=123qweRt",
   "RawDataSettings": {
-    "Host": "http://localhost:55390"
+    "Host": "http://localhost:55390/"
   }
 }
