Added some extention methods and helper methods

--- a/Libraries/Nop.Core/Nop.Core.csproj
+++ b/Libraries/Nop.Core/Nop.Core.csproj
@@ -35,5 +35,9 @@
     <Folder Include="Infrastructure\Collections\" />
     <Folder Include="Infrastructure\Reflection\" />
     <Folder Include="Domain\Notification\" />
+    <Folder Include="Data\Linq\" />
+    <Folder Include="Data\Linq\Extensions\" />
+    <Folder Include="Data\Linq\Expressions\" />
+    <Folder Include="Json\" />
   </ItemGroup>
 </Project>
