--- a/Presentation/Nop.Web.Framework/Nop.Web.Framework.csproj
+++ b/Presentation/Nop.Web.Framework/Nop.Web.Framework.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="BundlerMinifier.Core" Version="2.8.391" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="7.6.104" />
   </ItemGroup>
