--- a/Libraries/Nop.Services/Nop.Services.csproj
+++ b/Libraries/Nop.Services/Nop.Services.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="EPPlus" Version="4.5.2.1" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.4.4" />
     <PackageReference Include="MaxMind.GeoIP2" Version="3.0.0" />
