Add Ignite Caching

--- a/Presentation/Nop.Web/appsettings.json
+++ b/Presentation/Nop.Web/appsettings.json
@@ -50,6 +50,13 @@
     "UseRowNumberForPaging": false,
 
     //Enable to store TempData in the session state
-    "UseSessionStateTempDataProvider": false
+    "UseSessionStateTempDataProvider": false,
+
+    //Gets or sets a value indicating whether we should use Redis server for caching (instead of default in-memory caching)
+    "IgniteCachingEnabled": false, 
+    //Gets or sets ignite ipAddressess string. Used when Redis caching is enabled
+    "IgniteCachingConnectionString": [],
+    //Gets or sets a value indicating whether the data protection system should be configured to persist keys in the ignite
+    "PersistDataProtectionKeysToIgnite": true
   }
 }
