--- a/Presentation/Nop.Web/appsettings.json
+++ b/Presentation/Nop.Web/appsettings.json
@@ -53,10 +53,15 @@
     "UseSessionStateTempDataProvider": false,
 
     //Gets or sets a value indicating whether we should use Redis server for caching (instead of default in-memory caching)
-    "IgniteCachingEnabled": false, 
+    "IgniteCachingEnabled": false,
     //Gets or sets ignite ipAddressess string. Used when Redis caching is enabled
     "IgniteCachingConnectionString": [],
     //Gets or sets a value indicating whether the data protection system should be configured to persist keys in the ignite
-    "PersistDataProtectionKeysToIgnite": true
+    "PersistDataProtectionKeysToIgnite": true,
+
+    //Gets or Sets a value to enable change traking
+    "EnableChangeTracking": true,
+    //Gets or Sets a value to change retention (days)
+    "ChangeRetention": 10
   }
 }
