Update Change Tracking

--- a/Presentation/Nop.Web/appsettings.json
+++ b/Presentation/Nop.Web/appsettings.json
@@ -60,7 +60,7 @@
     "PersistDataProtectionKeysToIgnite": true,
 
     //Gets or Sets a value to enable change traking
-    "EnableChangeTracking": true,
+    "EnableChangeTracking": false,
     //Gets or Sets a value to change retention (days)
     "ChangeRetention": 10
   }
